<resources>
    <string name="app_name">NFC Storage Management</string>
    <string name="app_version">0.0.1</string>
    <string name="home_description">This application reads and writes NDEF messages from/to an NFC tag.\n\nAdditionally the app shows how to work with encrypted data that needs decryption.</string>
    <string name="home_fragments">There are 5 icons to click on:\n1 home = this page\n2 read NDEF message\n3 read encr = read an encrypted NDEF message\n4 activate the mirroring of data\n5 write the NDEF template to the tag\n\nNote: This app is working with tag types NTAG213, NTAG215 or NTAG216 only !</string>
    <string name="header_read">This app reads an NDEF message</string>
    <string name="description_read">This example expects a class 4 type tag with an NDEF record (RTD_TEXT).\n\nWhen a tag is discovered the data from all records will be read.</string>
    <string name="header_read_ciphertext">This app reads an encrypted NDEF message</string>
    <string name="description_read_ciphertext">This example expects a class 4 type tag with an encrypted NDEF record (RTD_TEXT).\n\nWhen a tag is discovered the data from all records will be read.</string>
    <string name="nfc_result">NFC read result</string>
    <string name="header_write">Write an NDEF message</string>
    <string name="description_write">This example writes an NDEF record (RTD_TEXT) and message to an NTAG 21x tag immediately when a tag is tapped.\nThe old content is overwritten without any recovery options.</string>
    <string name="read_ciphertext_description">If an encryption dataset is found the data is displayed as well and you can enter a passphrase to decrypt the data.</string>
    <string name="action_licenses">Used material and their licenses</string>
    <string name="header_ndef_settings">NDEF message settings</string>
    <string name="description_ndef_settings">Writes the NDEF message template to the NTAG with defined placeholders for UID, read counter and MAC.\n\nThis is working on tag types NTAG213, 215 or 216 only.</string>
    <string name="description_ndef_settings_2">There are 2 steps to do:\n1. press the TEST AND SAVE NDEF SETTINGS button\n2. tap a NTAG21x tag to the reader</string>
    <string name="header_activate">Activate the mirroring of data to NDEF message</string>
    <string name="description_activate">Activates the mirroring of data (UID, read counter and MAC) in an NDEF message on tapping</string>
    <string name="description_activate_rg">choose your action</string>
    <string name="header_personalize_tag">Run all steps to personalize a tag for NDEF mirroring</string>
    <string name="description_personalize_tag">This are the steps that will run when a tag is tapped\n\n1. write the NDEF template to the tag\n2. disable all existing mirror\n3. enable UID mirroring\n4. write the UID-based MAC to the tag</string>
    <string name="warning_personalize_tag">The app will IMMEDIATELY write to an attached tag without any further confirmation !</string>

</resources>